z-index fix for adder popup, sidebar conflict

--- a/src/sass/openeyes/components/sem/sidebar/_sidebar-element-structure.scss
+++ b/src/sass/openeyes/components/sem/sidebar/_sidebar-element-structure.scss
@@ -9,7 +9,7 @@
 	// layout and positioning is all handled
 	// by CSS grid (.sidebar) is all set up
 	&.element-overlay {
-		z-index: $oe-z-quicklook;
+		z-index: $oe-z-element-search;
 		.element-structure {
 			padding:0 0 20px 0;	
 		}
